--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -9,7 +9,7 @@ on:
     - ci-linters 
 
 jobs:
-  prettier:
+  curlylint:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,6 +23,21 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
+            
+    - name: Install curlylint
+      run: pip3 install curlylint
+    - name: Run curlylint
+      run: curlylint --parse-only $GITHUB_WORKSPACE/
+     
+  prettier:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+      with:
+        # Make sure the actual branch is checked out when running on pull requests
+        ref: ${{ github.head_ref }}
         
     - name: Prettify code
       uses: creyD/prettier_action@v3.1
@@ -31,8 +46,3 @@ jobs:
         dry: True
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
-    - name: Install curlylint
-      run: pip3 install curlylint
-    - name: Run curlylint
-      run: curlylint --parse-only $GITHUB_WORKSPACE/
