--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install curlylint
       run: pip3 install curlylint
     - name: Run curlylint
-      run: curlylint --parse-only $GITHUB_WORKSPACE/
+      run: curlylint --parse-only --verbose $GITHUB_WORKSPACE/
      
   prettier:
     runs-on: ubuntu-latest
@@ -40,7 +40,7 @@ jobs:
         ref: ${{ github.head_ref }}
         
     - name: Prettify code
-      uses: creyD/prettier_action@v3.1
+      uses: creyD/prettier_action@v3.3
       with:
         prettier_options: --write **/*.{css,js,md}
         dry: True
